# paw

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  COLOR_palette.md  CONTRIBUTING.md  Cargo.toml  Makefile  Paw_차세대_메신저_종합분석_및_방향.md  README.md  README_kr.md  docker-compose.yml  openclaw-plan.md
.sisyphus/: boulder.json
deploy/: docker-compose.prod.yml  fly.toml
docs/: AGENTIC_ENGINEERING_PLAN.md  ARCHITECTURE.md  PROJECT_SUMMARY.md  REPO_SPLIT_PLAN.md  ROADMAP.md  design-brief.md  e2ee-evaluation.md  mobile-design-tone-reference.md  native-core-contract.md  native-design-mood.md  native-foundation-closeout.md  native-migration-plan.md  native-mobile-automation-plan.md  native-next-steps.md  native-parallel-work-split.md  native-platform-contract.md  (+4 more)
paw-core/: Cargo.toml  build.rs  uniffi.toml
paw-core/src/: core.rs  lib.rs  paw_core.udl
paw-core/src/auth/: mod.rs  session_reset.rs  state_machine.rs  token_store.rs
paw-core/src/crypto/: mod.rs
paw-core/src/db/: mod.rs
paw-core/src/events/: mod.rs
paw-core/src/http/: client.rs  error.rs  media.rs  mod.rs
paw-core/src/platform/: mod.rs
paw-core/src/search/: mod.rs
paw-core/src/sync/: engine.rs  mod.rs  service.rs  streaming.rs
paw-core/src/ws/: mod.rs  reconnect.rs  service.rs
paw-core/tests/: phase3_live_smoke.rs
paw-core/uniffi/: paw_core.udl
paw-ffi/: Cargo.toml
paw-ffi/src/: api.rs  frb_generated.rs  lib.rs
paw-server/: Cargo.toml
paw-server/migrations/: 20260101000001_create_users.sql  20260101000002_create_devices.sql  20260101000003_create_otp_codes.sql  20260101000004_create_conversations.sql  20260101000005_create_messages.sql  20260101000006_create_media.sql  20260101000007_create_read_receipts.sql  20260101000008_create_prekey_bundles.sql  20260101000009_create_one_time_prekeys.sql  20260101000010_create_agent_tokens.sql  20260101000011_add_agent_avatar_revoked.sql  20260101000012_group_chat_limits.sql  20260101000013_conversation_agents.sql  20260101000014_channels.sql  20260101000015_push_tokens.sql  20260101000016_backups.sql  20260101000017_agent_marketplace.sql  20260101000018_performance_indexes.sql  20260101000019_moderation.sql  20260307223000_add_message_idempotency_key.sql  20260313120400_add_username_and_phone_privacy.sql  20260314103000_add_preferred_locale.sql  20260314212332_create_threads.sql  20260315180000_add_messages_thread_id.sql  20260316000000_add_token_revoked_at_to_users.sql  20260316090000_add_user_deletion_columns.sql  20260316100000_create_agent_permissions.sql  20260316103000_upgrade_threads_for_crud.sql  20260316113000_add_messages_forwarded_from.sql  20260316120000_add_admin_rbac_audit_logs.sql  20260316143000_create_link_previews.sql  20260316150000_create_message_attachments.sql  20260316160000_conversation_member_roles_admin_member.sql  20260316170000_create_agent_tool_calls.sql  20260316180000_create_message_attachments.sql  20260316183000_create_agent_permissions.sql  20260317090000_create_link_previews.sql  20260317100000_add_messages_forwarded_from.sql  20260317113000_add_thread_seq_to_messages.sql  20260318000000_create_message_attachments.sql  (+2 more)
paw-server/src/: i18n.rs  main.rs  metrics.rs  observability.rs  rate_limit.rs
paw-server/src/admin/: handlers.rs  models.rs  service.rs
paw-server/src/agents/: handlers.rs  mod.rs  models.rs  permissions.rs  service.rs
paw-server/src/auth/: device.rs  handlers.rs  jwt.rs  middleware.rs  mod.rs  otp.rs  otp_attempts.rs
paw-server/src/backup/: handlers.rs  models.rs  service.rs
paw-server/src/channels/: handlers.rs  models.rs  service.rs
paw-server/src/context_engine/: hooks.rs  mod.rs  models.rs
paw-server/src/db/: mod.rs  schema.rs
paw-server/src/devices/: handlers.rs  models.rs
paw-server/src/keys/: handlers.rs  models.rs  service.rs
paw-server/src/link_preview/: handlers.rs  mod.rs  models.rs  service.rs
paw-server/src/media/: handlers.rs  models.rs  service.rs
paw-server/src/messages/: handlers.rs  models.rs  service.rs
paw-server/src/moderation/: handlers.rs  models.rs  service.rs
paw-server/src/push/: handlers.rs  models.rs  service.rs
paw-server/src/threads/: handlers.rs  models.rs  service.rs
paw-server/src/users/: handlers.rs  models.rs
paw-server/src/ws/: connection.rs  handler.rs  hub.rs  mod.rs  pg_listener.rs
paw-server/tests/: architecture_test.rs  integration_test.rs
(+377 files in other folders)
